# auto-poster

./: .envrc  .gitignore  Cargo.toml  Dockerfile  Makefile  compose.yaml
.github/workflows/: ci.yml
config/: app.yaml
config/accounts/: ai_shinchaku.yaml  manga_shinkan.yaml
config/info_sources/: comic_natalie_rss.yaml  grok.yaml  rakuten_books.yaml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: collect.rs  generate.rs  migrate.rs  mod.rs  operate.rs  seed.rs  serve.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: lib.rs
crates/info-collector/: Cargo.toml
crates/info-collector/src/: lib.rs
crates/post-generator/: Cargo.toml
crates/post-generator/src/: lib.rs
crates/post-operator/: Cargo.toml
crates/post-operator/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs  lib.rs  models.rs  prelude.rs  telemetry.rs  testing.rs
crates/shared/src/db/: account.rs  info_source.rs  mod.rs  pool.rs
docs/superpowers/plans/: 2026-04-17-phase0-foundation.md
docs/superpowers/specs/: 2026-04-17-phase0-foundation-design.md
migrations/: 20260417000000_initial.sql
specs/: CLAUDE.md  decisions-pending.md  overview.md  roadmap.md
specs/architecture/: data-flow.md  system-architecture.md  tech-stack.md
specs/components/: info-collector.md  post-generator.md  post-operator.md
specs/components/dashboard/: api-contract.md  architecture.md  data-model.md  ui-flow.md
specs/operations/: accounts.md  information-sources.md  post-templates.md  posting-schedule.md
